[package]
name = "remivault_core"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "25.3.1"  }
blend-contract-sdk = { git = "https://github.com/blend-capital/blend-contract-sdk" }
[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }
blend-contract-sdk = { git = "https://github.com/blend-capital/blend-contract-sdk", features = ["testutils"] }